<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageProductType"
            android:layout_width="150dp"
            android:layout_height="165dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:tag="edit_layout_imageview" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/enter_your_name"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/enterName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/customers_name"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/product"

                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/SpinnerProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </Spinner>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/price"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:hint="@string/desPrice"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/quantity"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/units_available"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/MinusButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/QuantityUnitsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/_0"
                android:textStyle="bold" />

            <Button
                android:id="@+id/PlusButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/plus" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/address_to_ship_to"

                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/EditAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/address_for_delivery"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/orderInventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_inventory_to_provider" />


</LinearLayout>